# ResearchRepo

./: README.md
clone-parser/: README.md  dependency-reduced-pom.xml  pom.xml
clone-parser/data/: input.csv  output.csv  result.csv
clone-parser/src/main/java/com/parser/: Main.java
clone-parser/src/main/resources/: logback.xml
crawler/: README.md  downloader.py  main.py
line-of-code/: README.md  cloc.csv
line-of-code/resources/: LineOfCode.properties
line-of-code/src/: Config.java  Main.java
match-data/: .gitignore  README.md  pyproject.toml
match-data/cleaned_data/: count_unique_products.csv  important_params_type_1.csv  important_params_type_2.csv  product_type_1.csv  product_type_2.csv  user_type_1.csv  user_type_2.csv
match-data/src/methods/: Bert.ipynb  Deep Learning.ipynb  Random Forest.ipynb  Transformer_classification.ipynb  Transformer_regression_v1.ipynb  Transformer_regression_v2.ipynb  test.ipynb
match-data/src/process_data/: clean_input_data.py  clean_output_data.py  diff_important_params.py  extract_params.ipynb  generate_train_data.py
nanoGPT/config/: train_poetry.py  train_poetry_char.py
nanoGPT/data/poetry/: dataset.py  extract.py  prepare.py
nanoGPT/data/poetry_char/: poetry.txt  prepare.py
poetry/: README.md  dataset.py  extract.py  main.ipynb  poetry.txt
translate/: README.md  translate.ipynb
